2003-05-30  John Luke  <jluke@cfl.rr.com>

	* en/Gtk/ToggleButton.xml: Fix typo.
	* en/Gtk/Progress.xml: Fix typo.
	* en/Gtk/Tooltips.xml: Fix method signature.
	* en/Gtk/Button.xml: Add some info.

2003-05-29  Lee Mallabone  <gnome@fonicmonkey.net>

	* en/*Sharp/*.xml: Remove the internal void*.xml signal docs.

2003-05-21  Lee Mallabone  <gnome@fonicmonkey.net>

	* en/Gtk/*.xml: Remove some private bits of Gtk assembly.
	* en/Gtk/Button.xml: Result of running the updater.
	* en/Gtk/SizeGroup*.xml: First draft of docs for GtkSizeGroup.

2003-05-20  Hector E. Gomez Morales  <hgomez_36@flashmail.com>

	* en/Gtk/Menu.xml:add first draft.

2003-05-19  John Luke  <jluke@cfl.rr.com>
	* en/Gtk/SeparatorMenuItem.xml:
	* en/Gtk/Item.xml: Add first drafts.

2003-05-15  Martin Willemoes Hansen <mwh@sysrq.dk>
	* en/Gnome.xml: Added
	* en/GLib.xml: Added

2003-05-14  John Luke  <jluke@cfl.rr.com>
	* en/Gtk/Progress.xml:
	* en/Gtk/ProgressBar.xml: Add first drafts, without examples.
	* en/Gtk/EventBox.xml:
	* en/Gtk/Fixed.xml:
	* en/Gtk/ToggleButton.xml:
	* en/Gtk/Tooltips.xml:  Add myself as maintainer

2003-05-09  John Luke  <jluke@cfl.rr.com>

	* en/Gtk/ToolTips.xml: Add first draft, example.

2003-05-08  Lee Mallabone  <gnome@fonicmonkey.net>

	* en/Gtk/*.xml:
	* en/GtkSharp/*.xml: Changes as a result of "updating" the XML
	files to correspond to the latest actual API. Widget.xml is the
	only file to not process yet.

2003-05-02  Duncan Mak  <duncan@ximian.com>

	* en/Gtk/EventBox.xml:
	* en/Gtk/Fixed.xml: Add more updates from John Luke <jluke@cfl.rr.com>.

2003-05-01  Duncan Mak  <duncan@ximian.com>

	* en/Gtk/ToggleButton.xml: Add updates from John Luke <jluke@cfl.rr.com>.

2003-04-24  Pedro Martínez Juliá  <yoros@wanadoo.es>

	* en/Gtk/Combo.xml: Edit document. Ready to validate. There are a
	few TODO attributes but I think that will not be documented.

2003-04-22  Hector E. Gomez Morales  <hgomez_36@flashmail.com>

	* en/Gtk/AccelGroup.xml
	* en/Gtk/AccelLabel.xml