@@ -12,11 +12,12 @@
       <para>The <see cref="T:Gtk.Fixed" /> widget is a container which can place child widgets at fixed positions and with fixed sizes, given in pixels. <see cref="T:Gtk.Fixed" /> performs no automatic layout management.</para>
       <para>For most applications, you should not use this container! It keeps you from having to learn about the other Gtk# containers, but it results in broken applications. With <see cref="T:Gtk.Fixed" />, the following things will result in truncated text, overlapping widgets, and other display bugs:
 				<list type="bullet">
-          <item>Themes, which may change widget sizes.</item>
-          <item>Fonts other than the one you used to write the app will of course change the size of widgets containing text; keep in mind that users may use a larger font because of difficulty reading the default, or they may be using Windows or the framebuffer port of GTK+, where different fonts are available.</item>
-          <item>Translation of text into other languages changes its size. Also, display of non-English text will use a different font in many cases.</item>
-        </list></para>
-      <para>In addition, the fixed widget can't properly be mirrored in right-to-left languages such as Hebrew and Arabic. i.e. normally GTK+ will flip the interface to put labels to the right of the thing they label, but it can't do that with <see cref="T:Gtk.Fixed" />. So your application will not be usable in right-to-left languages.</para>
+          <item><term>Themes, which may change widget sizes.</term></item>
+          <item><term>Fonts other than the one you used to write the app will of course change the size of widgets containing text; keep in mind that users may use a larger font because of difficulty reading the default, or they may be using Windows or the framebuffer port of GTK+, where different fonts are available.</term></item>
+          <item><term>Translation of text into other languages changes its size. Also, display of non-English text will use a different font in many cases.</term></item>
+        </list>
+			</para>
+      <para>In addition, the fixed widget can't properly be mirrored in right-to-left languages such as Hebrew and Arabic. i.e. normally Gtk# will flip the interface to put labels to the right of the thing they label, but it can't do that with <see cref="T:Gtk.Fixed" />. So your application will not be usable in right-to-left languages.</para>
       <para>Finally, fixed positioning makes it kind of annoying to add/remove GUI elements, since you have to reposition all the other elements. This is a long-term maintenance problem for your application.</para>
       <para>If you know none of these things are an issue for your application, and prefer the simplicity of <see cref="T:Gtk.Fixed" />, by all means use the widget. But you should be aware of the tradeoffs.</para>
     </remarks>
