@@ -1,5 +1,5 @@
 <Type Name="InputDialog" FullName="Gtk.InputDialog">
-  <TypeSignature Language="C#" Value="public class InputDialog : Gtk.Dialog, Implementor, IWrapper, IWrapper, IDisposable" Maintainer="auto" />
+  <TypeSignature Language="C#" Value="public class InputDialog : Gtk.Dialog, Implementor, IWrapper, IWrapper, IDisposable" Maintainer="John Luke" />
   <AssemblyInfo>
     <AssemblyName>gtk-sharp</AssemblyName>
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
@@ -7,8 +7,23 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>Configure devices for the XInput extension.</summary>
+    <remarks>
+			<para>
+				 NOTE: this <see cref="T:Gtk.Widget"/> is considered too specialized/little-used for Gtk#, and will in the future be moved to some other package.
+				 If your application needs this <see cref="T:Gtk.Widget"/>, feel free to use it, as the <see cref="T:Gtk.Widget"/> does work and is useful in some applications; it's just not of general interest.
+				 However, we are not accepting new features for the <see cref="T:Gtk.Widget"/>, and it will eventually move out of the Gtk# distribution.
+			</para>
+			<para>
+				<see cref="T:Gtk.InputDialog"/> displays a <see cref="T:Gtk.Dialog"/> which allows the user to configure XInput extension devices.
+				For each device, they can control the mode of the device (disabled, screen-relative, or window-relative), the mapping of axes to coordinates, and the mapping of the devices macro keys to key press events.
+			</para>
+			<para>
+				<see cref="T:Gtk.InputDialog"/> contains two <see cref="T:Gtk.Button"/>s to which the application can connect; one for closing the <see cref="T:Gtk.Dialog"/>, and one for saving the changes.
+				No actions are bound to these by default.
+				The changes that the user makes take effect immediately.
+			</para>
+		</remarks>
   </Docs>
   <Base>
     <BaseTypeName>Gtk.Dialog</BaseTypeName>
@@ -63,9 +78,9 @@
       <ReturnValue />
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <returns>To be added: an object of type 'Gtk.InputDialog'</returns>
-        <remarks>To be added</remarks>
+        <summary>Creates an instance of <see cref="T:Gtk.InputDialog"/></summary>
+        <returns>an object of type <see cref="T:Gtk.InputDialog"/></returns>
+        <remarks>Creates an instance of <see cref="T:Gtk.InputDialog"/></remarks>
       </Docs>
     </Member>
     <Member MemberName="GType">
@@ -75,8 +90,8 @@
         <ReturnType>System.UInt32</ReturnType>
       </ReturnValue>
       <Docs>
-        <summary>The GLib Type for Gtk.InputDialog</summary>
-        <returns>The GLib Type for the Gtk.InputDialog class.</returns>
+        <summary>The <see cref="T:GLib.Type"/> for <see cref="T:Gtk.InputDialog"/></summary>
+        <returns>The <see cref="T:GLib.Type"/> for the <see cref="T:Gtk.InputDialog"/> class.</returns>
         <remarks />
       </Docs>
     </Member>
@@ -86,8 +101,10 @@
       <ReturnValue />
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Emitted when the user changes the mode of a device from a GDK_MODE_SCREEN or GDK_MODE_WINDOW to GDK_MODE_ENABLED.</summary>
+        <remarks>
+					This signal is emitted when the user changes the mode of a device from a GDK_MODE_SCREEN or GDK_MODE_WINDOW to GDK_MODE_ENABLED.
+				</remarks>
       </Docs>
     </Member>
     <Member MemberName="EnableDevice">
@@ -96,8 +113,10 @@
       <ReturnValue />
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>Emitted when the user changes the mode of a device from GDK_MODE_DISABLED to a GDK_MODE_SCREEN or GDK_MODE_WINDOW.</summary>
+        <remarks>
+					This signal is emitted when the user changes the mode of a device from GDK_MODE_DISABLED to a GDK_MODE_SCREEN or GDK_MODE_WINDOW.
+				</remarks>
       </Docs>
     </Member>
     <Member MemberName=".ctor">
