@@ -1,9 +1,11 @@
 2003-05-30  John Luke  <jluke@cfl.rr.com>
 
-	* en/Gtk/ToggleButton.xml: Fix typo.
+	* en/Gtk/ToggleButton.xml: Fix typo, bulleted list.
 	* en/Gtk/Progress.xml: Fix typo.
 	* en/Gtk/Tooltips.xml: Fix method signature.
 	* en/Gtk/Button.xml: Add some info.
+	* en/Gtk/MessageDialog.xml: Add first draft
+	* en/Gtk/InputDialog: Add first draft
 
 2003-05-29  Lee Mallabone  <gnome@fonicmonkey.net>
 
